update:  attempt to add loading state to button

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
               </div>
               {% endfor %}
             </div>
-            <button type="submit">
+            <button type="submit" disabledd="{{ loading }}">
               <a
                 class="inline-flex justify-center items-center py-3 px-5 mr-3 text-base font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900 cursor-pointer"
               >
