--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
               </div>
               {% endfor %}
             </div>
-            <button type="submit" disabled="{{ false }}">
+            <button type="submit">
               {{ loading }}
               <a
                 class="inline-flex justify-center items-center py-3 px-5 mr-3 text-base font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none cursor-pointer"
